# projet_fraude_cb

./: .$pipeline.drawio.bkp  .dockerignore  .env-dist  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  reset_projet.py  schema_pipeline.md  state.json  state.json-dist  streamlit.py
.streamlit/: config.toml
docs/: Documentation technique pour le monitoring de la solution avec Grafana.docx
grafana/dashboards/: Dashboard Machine.json  Dashboard Principal.json  Dashboard RAM.json  Détails par container.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
model/: preprocessor.joblib
notebooks/: EDA_PaySim.ipynb  ML_XGBoost.ipynb  ML_XGBoost_PaySim_historical.ipynb  ML_random_forest_PaySim_historical.ipynb  ML_random_forest_PaySim_historical2.ipynb  ML_random_forest_PaySim_historical_fred.ipynb  decoupe.py
src/API/: streamenvoi.py  streamrecepteur.py  worker_bq.py
src/dashboard/: dashboard.py
src/dashboard/assets/: style.css
src/ingestion/: ingestion.py
src/models/: features_list.joblib  pipeline_latest.joblib
src/retrain/: last_count.txt  retrain.py
