[project]
name = "projet-fraud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "matplotlib>=3.10.8",
    "pandas-gbq>=0.33.0",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.2",
]
